Penambahan Product Knowledge HTML - Login Path

--- a/login/product-knowledge.html
+++ b/login/product-knowledge.html
@@ -29,8 +29,8 @@
 			<h4><a href="member-area.html">Member Area</a></h4>
 			<h4><a href="cara-memulai.html">Cara Memulai</a></h4>
 			<h4><a href="mindset-training.html">Mindset Training</a></h4>
-			<h4 class="active"><a href="skill-training.html">Skill Training</a></h4>
-			<h4><a href="product-knowledge.html">Product Knowledge</a></h4>
+			<h4><a href="skill-training.html">Skill Training</a></h4>
+			<h4 class="active"><a href="product-knowledge.html">Product Knowledge</a></h4>
 			<div class="bottom">
 				<h4><a href="../index.html">Home</a></h4>
 				<span>|</span>
@@ -50,21 +50,21 @@
 				<h4><a href="member-area.html">Member Area</a></h4>
 				<h4><a href="cara-memulai.html">Cara Memulai</a></h4>
 				<h4><a href="mindset-training.html">Mindset Training</a></h4>
-				<h4 class="active"><a href="skill-training.html">Skill Training</a></h4>
-				<h4><a href="product-knowledge.html">Product Knowledge</a></h4>
+				<h4><a href="skill-training.html">Skill Training</a></h4>
+				<h4 class="active"><a href="product-knowledge.html">Product Knowledge</a></h4>
 			</div>
 		</div>
 
 		<!-- Main (Right) -->
 		<div class="main">
 			<div>
-				<h2>Skill Training</h2>
-				<h3>Brand Affiliates</h3>
+				<h2>Product Knowledge</h2>
+				<h3>ageLOC Product</h3>
 				<div class="card">
 					<div class="accordion">
 						<div class="content_box active">
 							<div class="title">
-								<h4>Marketing Plan (Share)</h4>
+								<h4>ageLOC Science Basic</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -74,7 +74,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Goal Setting Income 3-5jt</h4>
+								<h4>ageLOC Products Line</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -84,47 +84,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Membuat Data Nama</h4>
-								<i class="fas fa-chevron-down"></i>
-							</div>
-							<div class="content">
-								<img src="../assets/img/header-video.png">
-							</div>
-						</div>
-						<hr>
-						<div class="content_box">
-							<div class="title">
-								<h4>Tips Posting di Sosmed</h4>
-								<i class="fas fa-chevron-down"></i>
-							</div>
-							<div class="content">
-								<img src="../assets/img/header-video.png">
-							</div>
-						</div>
-						<hr>
-						<div class="content_box">
-							<div class="title">
-								<h4>Skrip Japri</h4>
-								<i class="fas fa-chevron-down"></i>
-							</div>
-							<div class="content">
-								<img src="../assets/img/header-video.png">
-							</div>
-						</div>
-						<hr>
-						<div class="content_box">
-							<div class="title">
-								<h4>Demo Produk (Ageloc Trilogy)</h4>
-								<i class="fas fa-chevron-down"></i>
-							</div>
-							<div class="content">
-								<img src="../assets/img/header-video.png">
-							</div>
-						</div>
-						<hr>
-						<div class="content_box">
-							<div class="title">
-								<h4>Follow Up Skill</h4>
+								<h4>ageLOC Me</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -135,12 +95,12 @@
 					</div>
 				</div>
 
-				<h3>Brand Representative</h3>
+				<h3>Skin Care Products</h3>
 				<div class="card">
 					<div class="accordion">
 						<div class="content_box">
 							<div class="title">
-								<h4>Marketing Plan (Build)</h4>
+								<h4>180 System</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -150,7 +110,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Goal Setting Strong BR (Exc)</h4>
+								<h4>Tri-Phasic White System</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -160,7 +120,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Tips Prospecting Online</h4>
+								<h4>Nutricential</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -170,7 +130,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Tips Presentasi Online</h4>
+								<h4>Clear Action System</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -180,17 +140,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Maintaining Loyal Customers</h4>
-								<i class="fas fa-chevron-down"></i>
-							</div>
-							<div class="content">
-								<img src="../assets/img/header-video.png">
-							</div>
-						</div>
-						<hr>
-						<div class="content_box">
-							<div class="title">
-								<h4>Membangun Tim Resellers / LTP</h4>
+								<h4>Seri Masker</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -201,12 +151,28 @@
 					</div>
 				</div>
 
-				<h3>Leadership</h3>
+				<h3>Make Up</h3>
 				<div class="card">
 					<div class="accordion">
 						<div class="content_box">
 							<div class="title">
-								<h4>Marketing Plan</h4>
+								<h4>Nu Color</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+					</div>
+				</div>
+
+				<h3>Daily Care</h3>
+				<div class="card">
+					<div class="accordion">
+						<div class="content_box">
+							<div class="title">
+								<h4>Lumi Spa</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -216,7 +182,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Road Map to Success Nu Skin</h4>
+								<h4>BFF Products</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -226,7 +192,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Video Trip Melbourne</h4>
+								<h4>Pasta Gigi AP24</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -236,7 +202,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Goal Setting EBP / Ruby</h4>
+								<h4>Enhancer</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -246,7 +212,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Membangun Team Player</h4>
+								<h4>NaPCA</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -256,7 +222,145 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Leadership Skills</h4>
+								<h4>Body Care</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Liquid Body Lufra</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Liquid Body Bar</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Scion Deodorant Roll-on</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+					</div>
+				</div>
+
+				<h3>Supplement Product Knowledge</h3>
+				<div class="card">
+					<div class="accordion">
+						<div class="content_box">
+							<div class="title">
+								<h4>Pharmanex</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>YSpan & R2</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Manfaat Youth Span</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Tegreen & Reishi</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Targeted Solution</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+					</div>
+				</div>
+
+				<h3>Antioxidant</h3>
+				<div class="card">
+					<div class="accordion">
+						<div class="content_box">
+							<div class="title">
+								<h4>Antioxidant</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Young & Health</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+					</div>
+				</div>
+
+				<h3>Weight Management</h3>
+				<div class="card">
+					<div class="accordion">
+						<div class="content_box">
+							<div class="title">
+								<h4>Business Opportunity</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>TR90</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
