--- a/login/member-area.html
+++ b/login/member-area.html
@@ -30,7 +30,7 @@
 			<h4><a href="cara-memulai.html">Cara Memulai</a></h4>
 			<h4><a href="mindset-training.html">Mindset Training</a></h4>
 			<h4><a href="skill-training.html">Skill Training</a></h4>
-			<h4><a href="product-knowledge">Product Knowledge</a></h4>
+			<h4><a href="product-knowledge.html">Product Knowledge</a></h4>
 			<div class="bottom">
 				<h4><a href="../index.html">Home</a></h4>
 				<span>|</span>
@@ -51,7 +51,7 @@
 				<h4><a href="cara-memulai.html">Cara Memulai</a></h4>
 				<h4><a href="mindset-training.html">Mindset Training</a></h4>
 				<h4><a href="skill-training.html">Skill Training</a></h4>
-				<h4><a href="product-knowledge">Product Knowledge</a></h4>
+				<h4><a href="product-knowledge.html">Product Knowledge</a></h4>
 			</div>
 		</div>
 
